chore(release): version 2.4.0 (#745)
* chore(deps-dev): de-bump typescript to 4.4.9 (#685)

* chore: change version

* feat(main): refactor some codes and fix some bugs

* feat: allow user to choose stream strategy (#690)

* chore(env): improve grammar (#699)

* improve grammar

* Update .env_example

* chore(deps): bump dotenv from 10.0.0 to 14.2.0 (#694)

Bumps [dotenv](https://github.com/motdotla/dotenv) from 10.0.0 to 14.2.0.
- [Release notes](https://github.com/motdotla/dotenv/releases)
- [Changelog](https://github.com/motdotla/dotenv/blob/master/CHANGELOG.md)
- [Commits](https://github.com/motdotla/dotenv/compare/v10.0.0...v14.2.0)

---
updated-dependencies:
- dependency-name: dotenv
  dependency-type: direct:production
  update-type: version-update:semver-major
...

Signed-off-by: dependabot[bot] <support@github.com>

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* chore(deps-dev): bump @typescript-eslint/parser from 5.9.0 to 5.10.0 (#695)

Bumps [@typescript-eslint/parser](https://github.com/typescript-eslint/typescript-eslint/tree/HEAD/packages/parser) from 5.9.0 to 5.10.0.
- [Release notes](https://github.com/typescript-eslint/typescript-eslint/releases)
- [Changelog](https://github.com/typescript-eslint/typescript-eslint/blob/main/packages/parser/CHANGELOG.md)
- [Commits](https://github.com/typescript-eslint/typescript-eslint/commits/v5.10.0/packages/parser)

---
updated-dependencies:
- dependency-name: "@typescript-eslint/parser"
  dependency-type: direct:development
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* chore(deps-dev): bump @types/node from 17.0.8 to 17.0.10 (#698)

Bumps [@types/node](https://github.com/DefinitelyTyped/DefinitelyTyped/tree/HEAD/types/node) from 17.0.8 to 17.0.10.
- [Release notes](https://github.c

--- a/.env_example
+++ b/.env_example
@@ -63,6 +63,13 @@ DEV_GUILD=[""]
 NODE_ENV=""
 
 #==============================================================================
+# Which youtube downloader do you want to use? Note: if you use play-dl, it will support a few sites.
+# Example: STREAM_STRATEGY="youtube-dl"
+# Available: play-dl, youtube-dl
+# Default: youtube-dl
+STREAM_STRATEGY=""
+
+#==============================================================================
 # Do you want to enable slash command support?
 # Example: ENABLE_SLASH_COMMAND="yes"
 # Default: yes
