--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "disc-11",
-  "version": "2.3.0",
+  "name": "rawon",
+  "version": "2.4.0",
   "private": true,
-  "description": "A dedicated open-source Discord bot for Zhycorp based from our Discord bot template with more features. Easy to use, and with no coding required.",
-  "repository": "https://github.com/zhycorp/disc-11",
+  "description": "A dedicated open-sourced Discord bot with many features of utilization. Easy to use, and with no coding required.",
+  "repository": "https://github.com/mzrtamp/rawon",
   "license": "BSD-3-Clause",
-  "author": "Zhycorp <support@zhycorp.net>",
+  "author": "mzrtamp <mozartrafikt@gmail.com>",
   "main": "index.js",
   "scripts": {
     "build": "npm run lint && npm run compile",
@@ -13,40 +13,46 @@
     "tscompile": "tsc --build tsconfig.json",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "start": "node ."
+    "start": "node -r dotenv/config ."
   },
   "eslintConfig": {
     "parserOptions": {
       "project": "./tsconfig.json"
     },
-    "extends": "@zhycorp/eslint-config/typescript"
+    "extends": "@zhycorp/eslint-config/typescript",
+    "rules": {
+      "@typescript-eslint/no-extra-parens": "off"
+    }
   },
   "dependencies": {
-    "@discordjs/voice": "^0.7.5",
+    "@discordjs/voice": "^0.8.0",
     "date-fns": "^2.28.0",
-    "discord.js": "^13.5.0",
-    "dotenv": "^10.0.0",
+    "discord.js": "^13.6.0",
+    "dotenv": "^16.0.0",
     "got": "^11.8.3",
-    "i18n": "0.13.4",
+    "i18n": "0.14.1",
     "opusscript": "^0.0.8",
     "prism-media": "^1.3.2",
     "soundcloud.ts": "^0.4.1",
     "sucrase": "^3.20.3",
     "tslib": "^2.3.1",
     "tweetnacl": "^1.0.3",
-    "youtube-dl-exec": "^2.0.2",
-    "youtubei": "^0.0.1-rc.23"
+    "youtubei": "^0.0.1-rc.28"
   },
   "devDependencies": {
     "@types/i18n": "^0.13.2",
-    "@types/node": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
-    "@zhycorp/eslint-config": "^6.0.2",
-    "eslint": "^8.5.0",
-    "typescript": "^4.5.4"
+    "@types/node": "^17.0.15",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "@zhycorp/eslint-config": "^7.1.0",
+    "eslint": "^8.8.0",
+    "typescript": "^4.5.5"
   },
   "engines": {
     "node": ">=16.6.0"
+  },
+  "optionalDependencies": {
+    "play-dl": "^1.8.1",
+    "youtube-dl-exec": "^2.0.2"
   }
 }
